syntax = "proto3";

package mizer.connections;

message MonitorDmxRequest {
  string output_id = 1;
}

message MonitorDmxResponse {
  repeated MonitorDmxUniverse universes = 1;
}

message MonitorDmxUniverse {
  uint32 universe = 1;
  bytes channels = 2;
}

message MonitorMidiRequest {
  string name = 1;
}
message MonitorMidiResponse {
  uint64 timestamp = 2;
  oneof message {
    NoteMsg cc = 3;
    NoteMsg note_off = 4;
    NoteMsg note_on = 5;
    SysEx sys_ex = 6;
    bytes unknown = 7;
  }

  message NoteMsg {
    uint32 channel = 1;
    uint32 note = 2;
    uint32 value = 3;
  }

  message SysEx {
    uint32 manufacturer1 = 1;
    uint32 manufacturer2 = 2;
    uint32 manufacturer3 = 3;
    uint32 model = 4;
    bytes data = 5;
  }
}


message MonitorOscRequest {
  string name = 1;
}
message MonitorOscResponse {
  uint64 timestamp = 1;
  string path = 2;
  repeated OscArgument args = 3;

  message OscArgument {
    oneof argument {
      int32 int = 1;
      float float = 2;
      int64 long = 3;
      double double = 4;
      bool bool = 5;
      OscColor color = 6;
    }

    message OscColor {
      uint32 red = 1;
      uint32 green = 2;
      uint32 blue = 3;
      uint32 alpha = 4;
    }
  }
}

message GetConnectionsRequest {
}
message GetDeviceProfilesRequest {
}

message ArtnetConfig {
  string name = 1;
  string host = 2;
  uint32 port = 3;
}

message SacnConfig {
  string name = 1;
}

message Connections {
  repeated Connection connections = 1;
}

message Connection {
  string name = 1;
  oneof connection {
    DmxConnection dmx = 10;
    MidiConnection midi = 11;
    OscConnection osc = 12;
    ProDjLinkConnection pro_dj_link = 13;
    HeliosConnection helios = 14;
    EtherDreamConnection ether_dream = 15;
    GamepadConnection gamepad = 16;
    MqttConnection mqtt = 17;
    G13Connection g13 = 18;
    WebcamConnection webcam = 19;
  }
}

message DmxConnection {
  string output_id = 1;
  oneof config {
    ArtnetConfig artnet = 3;
    SacnConfig sacn = 4;
  }
}

message HeliosConnection {
  string name = 1;
  uint32 firmware = 2;
}

message EtherDreamConnection {
  string name = 1;
}

message GamepadConnection {
  string id = 1;
  string name = 2;
}

message G13Connection {
  string id = 1;
}

message WebcamConnection {
  string id = 1;
  string name = 2;
}

message MidiConnection {
  optional string device_profile = 1;
}

message MidiDeviceProfiles {
  repeated MidiDeviceProfile profiles = 1;
}

message MidiDeviceProfile {
  string id = 1;
  string manufacturer = 2;
  string model = 3;
  optional string layout = 4;
  repeated Page pages = 5;

  message Page {
    string name = 1;
    repeated Group groups = 2;
    repeated Control controls = 3;
  }

  message Group {
    string name = 1;
    repeated Control controls = 2;
  }

  message Control {
    string id = 1;
    string name = 2;
    bool has_input = 3;
    bool has_output = 4;
  }
}

message OscConnection {
  string connection_id = 1;
  uint32 input_port = 2;
  uint32 output_port = 3;
  string output_address = 4;
}

message ProDjLinkConnection {
  string address = 1;
  string model = 2;
  uint32 player_number = 3;
  CdjPlayback playback = 5;
}

message CdjPlayback {
  bool live = 1;
  double bpm = 2;
  uint32 frame = 3;
  State playback = 4;
  Track track = 5;

  enum State {
    LOADING = 0;
    PLAYING = 1;
    CUED = 2;
    CUEING = 3;
  }

  message Track {
    string artist = 1;
    string title = 2;
  }
}

message MqttConnection {
  string connection_id = 1;
  string url = 2;
  optional string username = 3;
  optional string password = 4;
}

message ConfigureConnectionRequest {
  oneof config {
    DmxConnection dmx = 1;
    MqttConnection mqtt = 2;
    OscConnection osc = 3;
  }
}
